--- a/package.json
+++ b/package.json
@@ -12,30 +12,32 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@expo/metro-runtime": "4.0.1",
+    "@expo/vector-icons": "^14.0.2",
     "@mui/material": "^6.4.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/auth": "^21.12.0",
     "@react-native-firebase/firestore": "^21.12.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-navigation/native": "^7.1.4",
-    "@react-navigation/native-stack": "^7.3.8",
+    "@react-navigation/native": "^7.1.5",
+    "@react-navigation/native-stack": "^7.3.9",
     "@react-navigation/stack": "^7.1.1",
     "expo": "52.0.38",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
-    "firebase": "^11.4.0",
+    "firebase": "^11.6.0",
     "metro": "^0.81.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.17.2",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.14"
