Test CI/CD workflow

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
-
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,7 +12,6 @@
     "lint": "echo \"No ESLint configured yet. Add ESLint rules here.\" && exit 0",
     "build": "echo \"Expo builds are handled by EAS or manually. No local build needed.\" && exit 0"
   },
-
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -37,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.13.1",
@@ -48,7 +47,6 @@
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.14"
   },
-
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
