--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native-stack": "^7.3.9",
     "@react-navigation/stack": "^7.1.1",
     "expo": "52.0.38",
+    "expo-app-loading": "^2.1.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-splash-screen": "~0.29.21",
